--- a/E_railway/booking/templates/auth/login.html
+++ b/E_railway/booking/templates/auth/login.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     <style>
         body {
-            background-image: url('{% static "image/1.jpeg" %}');
+            background-image: url('{% static "image/train_new.jpeg" %}');
             background-size: cover;
             background-position: center;
             display: flex;
