--- a/E_railway/booking/templates/auth/register.html
+++ b/E_railway/booking/templates/auth/register.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     <style>
         body {
-            background: url("{% static 'image/2.jpeg' %}") no-repeat center center fixed;
+            background: url("{% static 'image/train_new.jpeg' %}") no-repeat center center fixed;
             background-size: cover;
             display: flex;
             justify-content: center;
